--- a/tokyo-revengers/index.html
+++ b/tokyo-revengers/index.html
@@ -53,7 +53,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Manjiro Sano</h5>
-                        <a href="indexxxxxxx.html" class="btn btn-dark o">Замовити квиток на Марс</a>
+                        <a href="indexxxxxxx.html" class="btn btn-dark o">GO to</a>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Ken Ryuguji</h5>
-                        <a href="index.html" class="btn btn-dark o">Замовити квиток на Марс</a>
+                        <a href="ken-ryuguji.html" class="btn btn-dark o">Go to</a>
                     </div>
                 </div>
             </div>
