--- a/tokyo-revengers/index.html
+++ b/tokyo-revengers/index.html
@@ -29,13 +29,13 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active r" aria-current="page" href="index.html">Сharacters</a>
+                        <a class="nav-link r active" aria-current="page" href="index.html">Сharacters</a>
                     </li>
                     <li class="nav-item">
                         <a target="_blank" class="nav-link r" href="manjiro-sano.html">Manjiro Sano</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link r" href="#">Pricing</a>
+                        <a class="nav-link r" href="ken-ryuguji.html">Ken Ryuguji</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link r">Disabled</a>
@@ -53,7 +53,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Manjiro Sano</h5>
-                        <a href="indexxxxxxx.html" class="btn btn-dark o">GO to</a>
+                        <a href="manjiro-sano.html" class="btn btn-dark o">GO to</a>
                     </div>
                 </div>
             </div>
