--- a/tokyo-revengers/ken-ryuguji.html
+++ b/tokyo-revengers/ken-ryuguji.html
@@ -40,16 +40,16 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a target="_blank" class="nav-link  r" href="index.html">Сharacters</a>
                     </li>
                     <li class="nav-item">
-                        <a target="_blank" class="nav-link r active" href="manjiro-sano.html">Manjiro Sano</a>
+                        <a target="_blank" class="nav-link r" href="manjiro-sano.html">Manjiro Sano</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link r" href="#">Pricing</a>
+                        <a class="nav-link r active" aria-current="page" href="ken-ryuguji.html">Ken Ryuguji</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link r" href="#">Disabled</a>
