--- a/tokyo-revengers/index.html
+++ b/tokyo-revengers/index.html
@@ -53,7 +53,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Manjiro Sano</h5>
-                        <a href="manjiro-sano.html" class="btn btn-dark o">GO to</a>
+                        <a href="manjiro-sano.html" class="btn btn-dark o">Go to</a>
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Takemichi Hanagaki</h5>
-                        <a href="index.html" class="btn btn-dark o">Замовити квиток на Марс</a>
+                        <a href="index.html" class="btn btn-dark o">Go to</a>
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Takashi Mitsuya</h5>
-                        <a href="index.html" class="btn btn-dark o">Замовити квиток на Марс</a>
+                        <a href="index.html" class="btn btn-dark o">Go to</a>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Hakkai Shiba</h5>
-                        <a href="index.html" class="btn btn-dark o">Замовити квиток на Марс</a>
+                        <a href="index.html" class="btn btn-dark o">Go to</a>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Haruki Hayashida (Pah-chin)</h5>
-                        <a href="index.html" class="btn btn-dark o">Замовити квиток на Марс</a>
+                        <a href="index.html" class="btn btn-dark o">Go to</a>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Ryohei Hayashi (Peh-yan)</h5>
-                        <a href="index.html" class="btn btn-dark o">Замовити квиток на Марс</a>
+                        <a href="index.html" class="btn btn-dark o">Go to</a>
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Keisuke Baji</h5>
-                        <a href="index.html" class="btn btn-dark o">Замовити квиток на Марс</a>
+                        <a href="index.html" class="btn btn-dark o">Go to</a>
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Chifuyu Matsuno</h5>
-                        <a href="index.html" class="btn btn-dark o">Замовити квиток на Марс</a>
+                        <a href="index.html" class="btn btn-dark o">Go to</a>
                     </div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Atsushi Sendo (Akkun)</h5>
-                        <a href="index.html" class="btn btn-dark o">Замовити квиток на Марс</a>
+                        <a href="index.html" class="btn btn-dark o">Go to</a>
                     </div>
                 </div>
             </div>
@@ -154,7 +154,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Takuya Yamamoto</h5>
-                        <a href="index.html" class="btn btn-dark o">Замовити квиток на Марс</a>
+                        <a href="index.html" class="btn btn-dark o">Go to</a>
                     </div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Makoto Suzuki</h5>
-                        <a href="index.html" class="btn btn-dark o">Замовити квиток на Марс</a>
+                        <a href="index.html" class="btn btn-dark o">Go to</a>
                     </div>
                 </div>
             </div>
@@ -174,7 +174,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Kazushi Yamagishi</h5>
-                        <a href="index.html" class="btn btn-dark o">Замовити квиток на Марс</a>
+                        <a href="index.html" class="btn btn-dark o">Go to</a>
                     </div>
                 </div>
             </div>
@@ -185,7 +185,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Tetta Kisaki</h5>
-                        <a href="index.html" class="btn btn-dark o">Замовити квиток на Марс</a>
+                        <a href="index.html" class="btn btn-dark o">Go to</a>
                     </div>
                 </div>
             </div>
@@ -195,7 +195,7 @@
                     <div class="card-header o">Tokyo Manji Gang</div>
                     <div class="card-body">
                         <h5 class="card-title o">Hanma Shuji</h5>
-                        <a href="index.html" class="btn btn-dark o">Замовити квиток на Марс</a>
+                        <a href="index.html" class="btn btn-dark o">Go to</a>
                     </div>
                 </div>
             </div>
