--- a/tokyo-revengers/ken-ryuguji.html
+++ b/tokyo-revengers/ken-ryuguji.html
@@ -153,7 +153,7 @@
         </div>
     </div>
 
-    <div class="olp">
+    <div class=".">
         <div class="container">
             <div class="row justify-content-end">
                 <div class="col-11 col-sm-10 col-md-9 shadow-quotes-manjiro">
